--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   intl: ^0.19.0
   syncfusion_flutter_charts: ^24.2.7+1
   fl_chart: ^0.66.2
+  firebase_app_check: ^0.2.2+4
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   json_serializable: ^6.7.1
