--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   fl_chart: ^0.66.2
   firebase_app_check: ^0.2.2+4
   fluttertoast: ^8.2.4
+  uuid: ^4.3.3
 
 dev_dependencies:
   json_serializable: ^6.7.1
